--- a/test-output/old/Hub spot Test automtion regression suite/methods-alphabetical.html
+++ b/test-output/old/Hub spot Test automtion regression suite/methods-alphabetical.html
@@ -1,24 +1,68 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Hub spot Test automtion regression suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ed838c">  <td>20/07/24 07:53:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest()[pri:3, instance:com.qa.hubspot.tests.LoginPageTest@2de366bb]">loginTest</td> 
-  <td>TestNG-tests-1@751693531</td>   <td></td> </tr>
-<tr bgcolor="ed838c">  <td>20/07/24 07:53:25</td>   <td>2362</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest()[pri:3, instance:com.qa.hubspot.tests.LoginPageTest@f31c0c6]">loginTest</td> 
-  <td>TestNG-tests-2@615252556</td>   <td></td> </tr>
-<tr bgcolor="b6c0a7">  <td>20/07/24 07:53:13</td>   <td>-9826</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String)[pri:0, instance:com.qa.hubspot.tests.LoginPageTest@f31c0c6]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@615252556</td>   <td></td> </tr>
-<tr bgcolor="b6c0a7">  <td>20/07/24 07:53:13</td>   <td>-9826</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String)[pri:0, instance:com.qa.hubspot.tests.LoginPageTest@2de366bb]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@751693531</td>   <td></td> </tr>
-<tr bgcolor="b6c0a7">  <td>20/07/24 07:53:24</td>   <td>1178</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.qa.hubspot.tests.LoginPageTest@2de366bb]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@751693531</td>   <td></td> </tr>
-<tr bgcolor="b6c0a7">  <td>20/07/24 07:53:27</td>   <td>4028</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.qa.hubspot.tests.LoginPageTest@f31c0c6]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@615252556</td>   <td></td> </tr>
-<tr bgcolor="ed838c">  <td>20/07/24 07:53:23</td>   <td>-114</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyLoginPageTitleTest()[pri:2, instance:com.qa.hubspot.tests.LoginPageTest@2de366bb]">verifyLoginPageTitleTest</td> 
-  <td>TestNG-tests-1@751693531</td>   <td></td> </tr>
-<tr bgcolor="ed838c">  <td>20/07/24 07:53:25</td>   <td>2291</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyLoginPageTitleTest()[pri:2, instance:com.qa.hubspot.tests.LoginPageTest@f31c0c6]">verifyLoginPageTitleTest</td> 
-  <td>TestNG-tests-2@615252556</td>   <td></td> </tr>
-<tr bgcolor="ed838c">  <td>20/07/24 07:53:16</td>   <td>-6310</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifySignUpLinkTest()[pri:1, instance:com.qa.hubspot.tests.LoginPageTest@2de366bb]">verifySignUpLinkTest</td> 
-  <td>TestNG-tests-1@751693531</td>   <td></td> </tr>
-<tr bgcolor="ed838c">  <td>20/07/24 07:53:20</td>   <td>-2726</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifySignUpLinkTest()[pri:1, instance:com.qa.hubspot.tests.LoginPageTest@f31c0c6]">verifySignUpLinkTest</td> 
-  <td>TestNG-tests-2@615252556</td>   <td></td> </tr>
+<tr bgcolor="d9ae94">  <td>20/07/24 10:59:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.contactsPageSetup()[pri:0, instance:com.qa.hubspot.tests.ContactsPageTest@6ecd665]">&gt;&gt;contactsPageSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-3@382725005</td>   <td></td> </tr>
+<tr bgcolor="d9ae94">  <td>20/07/24 10:59:36</td>   <td>32718</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.contactsPageSetup()[pri:0, instance:com.qa.hubspot.tests.ContactsPageTest@a619c2]">&gt;&gt;contactsPageSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-3@382725005</td>   <td></td> </tr>
+<tr bgcolor="83a078">  <td>20/07/24 10:59:03</td>   <td>-55</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.homePageSetup()[pri:0, instance:com.qa.hubspot.tests.HomePageTest@5eccd3b9]">&gt;&gt;homePageSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@1677554374</td>   <td></td> </tr>
+<tr bgcolor="83a078">  <td>20/07/24 10:59:23</td>   <td>20077</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.homePageSetup()[pri:0, instance:com.qa.hubspot.tests.HomePageTest@4d8539de]">&gt;&gt;homePageSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@1677554374</td>   <td></td> </tr>
+<tr bgcolor="7f67bc">  <td>20/07/24 10:59:09</td>   <td>5621</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest()[pri:3, instance:com.qa.hubspot.tests.LoginPageTest@73eb8672]">loginTest</td> 
+  <td>TestNG-tests-1@254956529</td>   <td></td> </tr>
+<tr bgcolor="7f67bc">  <td>20/07/24 10:59:25</td>   <td>22070</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest()[pri:3, instance:com.qa.hubspot.tests.LoginPageTest@2a037324]">loginTest</td> 
+  <td>TestNG-tests-1@254956529</td>   <td></td> </tr>
+<tr bgcolor="a5d062">  <td>20/07/24 10:58:58</td>   <td>-5699</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String)[pri:0, instance:com.qa.hubspot.tests.LoginPageTest@73eb8672]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@254956529</td>   <td></td> </tr>
+<tr bgcolor="a5d062">  <td>20/07/24 10:58:58</td>   <td>-5699</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String)[pri:0, instance:com.qa.hubspot.tests.HomePageTest@5eccd3b9]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@1677554374</td>   <td></td> </tr>
+<tr bgcolor="a5d062">  <td>20/07/24 10:58:58</td>   <td>-5289</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String)[pri:0, instance:com.qa.hubspot.tests.ContactsPageTest@6ecd665]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-3@382725005</td>   <td></td> </tr>
+<tr bgcolor="a5d062">  <td>20/07/24 10:59:14</td>   <td>11149</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String)[pri:0, instance:com.qa.hubspot.tests.LoginPageTest@2a037324]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@254956529</td>   <td></td> </tr>
+<tr bgcolor="a5d062">  <td>20/07/24 10:59:18</td>   <td>15136</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String)[pri:0, instance:com.qa.hubspot.tests.HomePageTest@4d8539de]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@1677554374</td>   <td></td> </tr>
+<tr bgcolor="a5d062">  <td>20/07/24 10:59:32</td>   <td>28334</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String)[pri:0, instance:com.qa.hubspot.tests.ContactsPageTest@a619c2]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-3@382725005</td>   <td></td> </tr>
+<tr bgcolor="a5d062">  <td>20/07/24 10:59:11</td>   <td>7661</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.qa.hubspot.tests.LoginPageTest@73eb8672]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@254956529</td>   <td></td> </tr>
+<tr bgcolor="a5d062">  <td>20/07/24 10:59:17</td>   <td>13531</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.qa.hubspot.tests.HomePageTest@5eccd3b9]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@1677554374</td>   <td></td> </tr>
+<tr bgcolor="a5d062">  <td>20/07/24 10:59:22</td>   <td>18547</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.qa.hubspot.tests.ContactsPageTest@6ecd665]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-3@382725005</td>   <td></td> </tr>
+<tr bgcolor="a5d062">  <td>20/07/24 10:59:26</td>   <td>22887</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.qa.hubspot.tests.LoginPageTest@2a037324]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@254956529</td>   <td></td> </tr>
+<tr bgcolor="a5d062">  <td>20/07/24 10:59:35</td>   <td>31426</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.qa.hubspot.tests.HomePageTest@4d8539de]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@1677554374</td>   <td></td> </tr>
+<tr bgcolor="a5d062">  <td>20/07/24 10:59:50</td>   <td>46542</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.qa.hubspot.tests.ContactsPageTest@a619c2]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-3@382725005</td>   <td></td> </tr>
+<tr bgcolor="d9ae94">  <td>20/07/24 10:59:17</td>   <td>13900</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.verifyContactsPageHeader()[pri:2, instance:com.qa.hubspot.tests.ContactsPageTest@6ecd665]">verifyContactsPageHeader</td> 
+  <td>TestNG-tests-3@382725005</td>   <td></td> </tr>
+<tr bgcolor="d9ae94">  <td>20/07/24 10:59:46</td>   <td>43185</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.verifyContactsPageHeader()[pri:2, instance:com.qa.hubspot.tests.ContactsPageTest@a619c2]">verifyContactsPageHeader</td> 
+  <td>TestNG-tests-3@382725005</td>   <td></td> </tr>
+<tr bgcolor="d9ae94">  <td>20/07/24 10:59:17</td>   <td>13294</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.verifyContactsPageTitleTest()[pri:1, instance:com.qa.hubspot.tests.ContactsPageTest@6ecd665]">verifyContactsPageTitleTest</td> 
+  <td>TestNG-tests-3@382725005</td>   <td></td> </tr>
+<tr bgcolor="d9ae94">  <td>20/07/24 10:59:46</td>   <td>42665</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.verifyContactsPageTitleTest()[pri:1, instance:com.qa.hubspot.tests.ContactsPageTest@a619c2]">verifyContactsPageTitleTest</td> 
+  <td>TestNG-tests-3@382725005</td>   <td></td> </tr>
+<tr bgcolor="83a078">  <td>20/07/24 10:59:11</td>   <td>8019</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyHomePageHeaderTest()[pri:1, instance:com.qa.hubspot.tests.HomePageTest@5eccd3b9]">verifyHomePageHeaderTest</td> 
+  <td>TestNG-tests-2@1677554374</td>   <td></td> </tr>
+<tr bgcolor="83a078">  <td>20/07/24 10:59:29</td>   <td>25376</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyHomePageHeaderTest()[pri:1, instance:com.qa.hubspot.tests.HomePageTest@4d8539de]">verifyHomePageHeaderTest</td> 
+  <td>TestNG-tests-2@1677554374</td>   <td></td> </tr>
+<tr bgcolor="83a078">  <td>20/07/24 10:59:17</td>   <td>13420</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyHomePageTitleTest()[pri:2, instance:com.qa.hubspot.tests.HomePageTest@5eccd3b9]">verifyHomePageTitleTest</td> 
+  <td>TestNG-tests-2@1677554374</td>   <td></td> </tr>
+<tr bgcolor="83a078">  <td>20/07/24 10:59:35</td>   <td>31227</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyHomePageTitleTest()[pri:2, instance:com.qa.hubspot.tests.HomePageTest@4d8539de]">verifyHomePageTitleTest</td> 
+  <td>TestNG-tests-2@1677554374</td>   <td></td> </tr>
+<tr bgcolor="83a078">  <td>20/07/24 10:59:17</td>   <td>13433</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyLoggedInUserTest()[pri:3, instance:com.qa.hubspot.tests.HomePageTest@5eccd3b9]">verifyLoggedInUserTest</td> 
+  <td>TestNG-tests-2@1677554374</td>   <td></td> </tr>
+<tr bgcolor="83a078">  <td>20/07/24 10:59:35</td>   <td>31249</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyLoggedInUserTest()[pri:3, instance:com.qa.hubspot.tests.HomePageTest@4d8539de]">verifyLoggedInUserTest</td> 
+  <td>TestNG-tests-2@1677554374</td>   <td></td> </tr>
+<tr bgcolor="7f67bc">  <td>20/07/24 10:59:09</td>   <td>5590</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyLoginPageTitleTest()[pri:2, instance:com.qa.hubspot.tests.LoginPageTest@73eb8672]">verifyLoginPageTitleTest</td> 
+  <td>TestNG-tests-1@254956529</td>   <td></td> </tr>
+<tr bgcolor="7f67bc">  <td>20/07/24 10:59:25</td>   <td>22049</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyLoginPageTitleTest()[pri:2, instance:com.qa.hubspot.tests.LoginPageTest@2a037324]">verifyLoginPageTitleTest</td> 
+  <td>TestNG-tests-1@254956529</td>   <td></td> </tr>
+<tr bgcolor="7f67bc">  <td>20/07/24 10:59:03</td>   <td>-26</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifySignUpLinkTest()[pri:1, instance:com.qa.hubspot.tests.LoginPageTest@73eb8672]">verifySignUpLinkTest</td> 
+  <td>TestNG-tests-1@254956529</td>   <td></td> </tr>
+<tr bgcolor="7f67bc">  <td>20/07/24 10:59:21</td>   <td>17460</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifySignUpLinkTest()[pri:1, instance:com.qa.hubspot.tests.LoginPageTest@2a037324]">verifySignUpLinkTest</td> 
+  <td>TestNG-tests-1@254956529</td>   <td></td> </tr>
 </table>
