--- a/test-output/old/Hub spot Test automtion regression suite/methods-not-run.html
+++ b/test-output/old/Hub spot Test automtion regression suite/methods-not-run.html
@@ -1,2 +1,4 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>com.qa.hubspot.tests.ContactsPageTest.createNewContactTest</td></tr>
+<tr><td>com.qa.hubspot.tests.ContactsPageTest.createNewContactTest</td></tr>
 </table>
