--- a/test-output/old/Hub spot Test automtion regression suite/toc.html
+++ b/test-output/old/Hub spot Test automtion regression suite/toc.html
@@ -8,30 +8,62 @@
 <h3><p align="center">Results for<br/><em>Hub spot Test automtion regression suite</em></p></h3>
 <table border='1' width='100%'>
 <tr valign='top'>
-<td>2 tests</td>
-<td><a target='mainFrame' href='classes.html'>1 class</a></td>
-<td>6 methods:<br/>
+<td>6 tests</td>
+<td><a target='mainFrame' href='classes.html'>3 classes</a></td>
+<td>16 methods:<br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods.html'>chronological</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-alphabetical.html'>alphabetical</a><br/>
-&nbsp;&nbsp;<a target='mainFrame' href='methods-not-run.html'>not run (0)</a></td>
+&nbsp;&nbsp;<a target='mainFrame' href='methods-not-run.html'>not run (2)</a></td>
 </tr>
 <tr>
 <td><a target='mainFrame' href='groups.html'>0 group</a></td>
 <td><a target='mainFrame' href='reporter-output.html'>reporter output</a></td>
 <td><a target='mainFrame' href='testng.xml.html'>testng.xml</a></td>
 </tr></table>
-<table width='100%' class='test-passed'>
+<table width='100%' class='test-failed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>HubSpot Feature Testing - chrome (3/0/0)</td><td valign='top' align='right'>
-  <a href='HubSpot Feature Testing - chrome.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>HubSpot Feature Testing - Contacts Page - chrome (1/1/0)</td><td valign='top' align='right'>
+  <a href='HubSpot Feature Testing - Contacts Page - chrome.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-failed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>HubSpot Feature Testing - contacts page - firefox (1/1/0)</td><td valign='top' align='right'>
+  <a href='HubSpot Feature Testing - contacts page - firefox.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
 
 <table width='100%' class='test-passed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>HubSpot Feature Testing - firefox (3/0/0)</td><td valign='top' align='right'>
-  <a href='HubSpot Feature Testing - firefox.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>HubSpot Feature Testing - Login page - chrome (3/0/0)</td><td valign='top' align='right'>
+  <a href='HubSpot Feature Testing - Login page - chrome.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>HubSpot Feature Testing - home page - chrome (3/0/0)</td><td valign='top' align='right'>
+  <a href='HubSpot Feature Testing - home page - chrome.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>HubSpot Feature Testing - home page - firefox (3/0/0)</td><td valign='top' align='right'>
+  <a href='HubSpot Feature Testing - home page - firefox.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>HubSpot Feature Testing - login page - firefox (3/0/0)</td><td valign='top' align='right'>
+  <a href='HubSpot Feature Testing - login page - firefox.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
